# polars_indicator

./: .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  MANIFEST.in  Makefile  README.md  build_and_publish.py  example_position.py  example_supertrend.py  pyproject.toml  run.py  test_supertrend.py
.github/workflows/: publish_to_pypi.yml
examples/: example_position.py  example_supertrend.py
polars_indicator/: __init__.py
src/: lib.rs  position.rs  supertrend.rs
tests/: test_pig_latinnify.py  test_position.py  test_supertrend.py
