[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-indicator"
description = "Technical indicators for Polars dataframes using Rust"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ender", email = "codeotter0201@gmail.com"},
]
maintainers = [
    {name = "Ender", email = "codeotter0201@gmail.com"},
]
keywords = ["polars", "technical-analysis", "indicators", "rust", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.24.4",
    "polars>=1.8.2",
]

[project.urls]
Homepage = "https://github.com/codeotter0201/polars_indicator"
Repository = "https://github.com/codeotter0201/polars_indicator"
Documentation = "https://github.com/codeotter0201/polars_indicator#readme"
Issues = "https://github.com/codeotter0201/polars_indicator/issues"

[tool.maturin]
module-name = "polars_indicator._internal"

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "twine>=6.1.0",
]
